[tool.poetry]
name = "aichatbot"
version = "0.1.0"
description = ""
authors = ["Rama Kotaru <70151452+SrikanthChowdary495@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
black = "^24.10.0"
isort = "^5.13.2"
langchain-openai = "^0.2.9"
langgraph = "^0.2.53"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
